--- a/index.htm
+++ b/index.htm
@@ -132,7 +132,7 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 		</div>
 					<nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" aria-hidden="true">
 				<ul id="menu-2-9c00577" class="elementor-nav-menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-5 current_page_item menu-item-506"><a href="index.htm" aria-current="page" class="elementor-item elementor-item-active menu-link" tabindex="-1">Home</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-507"><a href="contact-us/index.htm" class="elementor-item menu-link" tabindex="-1">Contact Us</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-507"><a href="https://wa.me/212778839020" class="elementor-item menu-link" tabindex="-1">Contact Us</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-508"><a href="privacy-policy/index.htm" class="elementor-item menu-link" tabindex="-1">Privacy Policy</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-509"><a href="terms-of-service/index.htm" class="elementor-item menu-link" tabindex="-1">Terms of service</a></li>
 </ul>			</nav>
@@ -156,7 +156,7 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 				<div class="elementor-widget-container">
 						<nav class="elementor-nav-menu--main elementor-nav-menu__container elementor-nav-menu--layout-horizontal e--pointer-underline e--animation-fade">
 				<ul id="menu-1-b8beadf" class="elementor-nav-menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-5 current_page_item menu-item-506"><a href="index.htm" aria-current="page" class="elementor-item elementor-item-active menu-link">Home</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-507"><a href="contact-us/index.htm" class="elementor-item menu-link">Contact Us</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-507"><a href="https://wa.me/212778839020" class="elementor-item menu-link">Contact Us</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-508"><a href="privacy-policy/index.htm" class="elementor-item menu-link">Privacy Policy</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-509"><a href="terms-of-service/index.htm" class="elementor-item menu-link">Terms of service</a></li>
 </ul>			</nav>
@@ -165,7 +165,7 @@ var _ckyStyles = {"css":".cky-overlay{background: #000000; opacity: 0.4; positio
 		</div>
 					<nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" aria-hidden="true">
 				<ul id="menu-2-b8beadf" class="elementor-nav-menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-5 current_page_item menu-item-506"><a href="index.htm" aria-current="page" class="elementor-item elementor-item-active menu-link" tabindex="-1">Home</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-507"><a href="contact-us/index.htm" class="elementor-item menu-link" tabindex="-1">Contact Us</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-507"><a href="https://wa.me/212778839020" class="elementor-item menu-link" tabindex="-1">Contact Us</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-508"><a href="privacy-policy/index.htm" class="elementor-item menu-link" tabindex="-1">Privacy Policy</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-509"><a href="terms-of-service/index.htm" class="elementor-item menu-link" tabindex="-1">Terms of service</a></li>
 </ul>			</nav>
@@ -873,7 +873,7 @@ You choose IPTVUKSHOP</h2>		</div>
 				<div class="elementor-element elementor-element-bf6b458 elementor-align-center elementor-widget elementor-widget-button" data-id="bf6b458" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a class="elementor-button elementor-button-link elementor-size-sm" href="contact-us/index.htm">
+			<a class="elementor-button elementor-button-link elementor-size-sm" href="https://wa.me/212778839020">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-text">Contact Us</span>
 		</span>
@@ -907,7 +907,7 @@ You choose IPTVUKSHOP</h2>		</div>
 				<div class="elementor-widget-container">
 						<nav class="elementor-nav-menu--main elementor-nav-menu__container elementor-nav-menu--layout-vertical e--pointer-underline e--animation-fade">
 				<ul id="menu-1-9cc4ba5" class="elementor-nav-menu sm-vertical"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-5 current_page_item menu-item-506"><a href="index.htm" aria-current="page" class="elementor-item elementor-item-active menu-link">Home</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-507"><a href="contact-us/index.htm" class="elementor-item menu-link">Contact Us</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-507"><a href="https://wa.me/212778839020" class="elementor-item menu-link">Contact Us</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-508"><a href="privacy-policy/index.htm" class="elementor-item menu-link">Privacy Policy</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-509"><a href="terms-of-service/index.htm" class="elementor-item menu-link">Terms of service</a></li>
 </ul>			</nav>
@@ -916,7 +916,7 @@ You choose IPTVUKSHOP</h2>		</div>
 		</div>
 					<nav class="elementor-nav-menu--dropdown elementor-nav-menu__container" aria-hidden="true">
 				<ul id="menu-2-9cc4ba5" class="elementor-nav-menu sm-vertical"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-5 current_page_item menu-item-506"><a href="index.htm" aria-current="page" class="elementor-item elementor-item-active menu-link" tabindex="-1">Home</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-507"><a href="contact-us/index.htm" class="elementor-item menu-link" tabindex="-1">Contact Us</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-507"><a href="https://wa.me/212778839020" class="elementor-item menu-link" tabindex="-1">Contact Us</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-508"><a href="privacy-policy/index.htm" class="elementor-item menu-link" tabindex="-1">Privacy Policy</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-509"><a href="terms-of-service/index.htm" class="elementor-item menu-link" tabindex="-1">Terms of service</a></li>
 </ul>			</nav>
