--- a/index.htm
+++ b/index.htm
@@ -12,7 +12,7 @@
 <link rel="canonical" href="index.htm">
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="website">
-<meta property="og:title" content="The Best IPTV Services In 2023 - iptv list - Affordable Prices">
+<meta property="og:title" content="The Best IPTV Services In 2024 - Top Offers - Affordable Prices">
 <meta property="og:description" content="The Number 1 Iptv Provider, We Offer The Most Affordable Prices Plans On All Your. IPTV Subscription Services Are Always Ready with Our Powerful Streaming Servers.">
 <meta property="og:url" content="https://iptv4kmaroc.store/">
 <meta property="og:site_name" content="IPTVUKSHOP">
